--- a/views/questions/questions.ejs
+++ b/views/questions/questions.ejs
@@ -1,38 +1,46 @@
 <%- include('../partials/header', {title: 'All Questions', styles:
-'css/questions.css'}) %>
-<header>
-  <h1>All Questions</h1>
-</header>
-<main>
-  <table>
-    <thead>
-      <tr>
-        <th class="text-center">Question</th>
-        <th class="text-center">Category</th>
-        <th class="text-center">Answer</th>
-        <th class="text-center">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% questions.forEach(function(question) { %>
-      <tr>
-        <td><%= question.question %></td>
-        <td><%= question.category %></td>
-        <td><%= question.answer %></td>
-        <td class="actions">
-          <button
-            class="action-btn"
-            onclick="location.href='/questions/<%= question._id %>/edit'"
-          >
-            Edit
-          </button>
-          <form method="post" action="/questions/<%= question._id %>/delete">
-            <button class="action-btn" type="submit">Delete</button>
-          </form>
-        </td>
-      </tr>
-      <% }); %>
-    </tbody>
-  </table>
+'css/styles.css'}) %>
+<div class="dark-overlay"></div>
+<main class="container-fluid mt-5 main-content">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-12 col-md-6 text-center">
+      <h1 class="display-1">All Questions</h1>
+
+      <table>
+        <thead>
+          <tr>
+            <th class="text-center">Question</th>
+            <th class="text-center">Category</th>
+            <th class="text-center">Answer</th>
+            <th class="text-center">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% questions.forEach(function(question) { %>
+          <tr>
+            <td><%= question.question %></td>
+            <td><%= question.category %></td>
+            <td><%= question.answer %></td>
+            <td class="actions">
+              <button
+                class="btn edit-btn"
+                onclick="location.href='/questions/<%= question._id %>/edit'"
+              >
+                Edit
+              </button>
+              <form
+                method="post"
+                action="/questions/<%= question._id %>/delete"
+              >
+                <button class="btn delete-btn" type="submit">Delete</button>
+              </form>
+            </td>
+          </tr>
+          <% }); %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <footer><%- include('../partials/footer') %></footer>
 </main>
-<footer><%- include('../partials/footer') %></footer>
