--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,7 +40,9 @@ body {
     font-size: 2rem;
     font-weight: bold;
     margin-bottom: 1rem;
+    min-height: 100px;
 }
+
 
 .main {
     flex: 1 0 auto;
@@ -65,6 +67,7 @@ body {
 
 .answer-wrapper {
     margin-bottom: 2rem;
+    min-height: 150px;
 }
 
 .form-check-input {
@@ -194,8 +197,22 @@ table td {
     margin-top: 2rem;
 }
 
+.checkbox-container {
+    height: auto;
+    border: 1px solid gray;
+    border-radius: 7px;
+    margin-left: 20px;
+    width: 90%;
+    padding: 5px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+}
+
 .form-check-label {
-    margin-left: 1.5rem;
+    /* margin-left: 1.5rem; */
+    color: #fff;
 }
 
 .form-group label {
@@ -278,7 +295,8 @@ table td {
     }
 
     .card {
-        max-width: 90%;
+        min-width: 90%;
+        min-height: 250px;
     }
 
     .btn-container {
