--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -5,7 +5,7 @@
     <div class="container d-flex flex-column justify-content-center min-vh-100">
       <h1 class="text-center my-4 display-1">Quiz Time!</h1>
 
-      <div class="checkbox-container text-center mb-3">
+      <div class="checkbox-container mb-3">
         <div class="form-check form-check-inline">
           <input
             class="form-check-input"
