working on styling and make the create page look good

--- a/public/css/addquestion.css
+++ b/public/css/addquestion.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     margin-top: 30px;
     max-width: 600px;
 }
@@ -27,4 +27,4 @@
 
 .btn-primary:hover {
     background-color: #3e8e41;
-}
+} */
