redoing some of the views

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="<%= styles %>" />
-    <link rel="stylesheet" href="./css/styles.css">
+    
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -35,13 +35,13 @@
               <a href="/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/questions/create">Add Question</a>
+              <a class="nav-link" href="/questions/create">Add Questions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/questions">Modify Question</a>
+              <a class="nav-link" href="/modify-questions">Edit/Delete Questions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/questions">View All Questions</a>
+              <a class="nav-link" href="/view-questions">View All Questions</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/quiz">Start Quiz!</a>
