--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,23 +5,87 @@ body {
     padding: 0;
 }
 
-.flex-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
 body {
     background-image: url("https://images.unsplash.com/photo-1517260468809-807bfd11d968?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
+}
+
+.landing-page {
+    min-height: 100vh;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin-top: 30vh;
 }
 
 .title {
     color: #fff;
 }
+
+/* Display all questions page styles */
+table {
+    margin: 0 auto;
+    border-collapse: collapse;
+    border-radius: 10px;
+    width: 100%;
+}
+
+thead {
+    background-color: gray;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+table th,
+table td {
+    padding: 5px;
+    text-align: left;
+}
+
+table th {
+    background-color: #969696;
+    color: #fff;
+}
+
+table td {
+    background-color: #f5f5f5;
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+@media (max-width: 576px) {
+    .display-1 {
+        font-size: 3rem;
+    }
+
+    #questions-question {
+        font-size: 1.5rem;
+        color: green;
+    }
+
+    #questions-category {
+        font-size: 1rem;
+        color: blue;
+    }
+
+    #questions-answer {
+        font-weight: 900;
+        font-size: 1.6rem;
+        color: orange;
+    }
+}
+
 
 .card {
     max-width: 50%;
@@ -125,37 +189,11 @@ footer {
     color: #fff;
 }
 
-table {
-    width: 100%;
-    margin: 0 auto;
-    border-collapse: collapse;
-    border-radius: 10px;
-    -webkit-border-radius: ;
-    -moz-border-radius: ;
-    -ms-border-radius: ;
-    -o-border-radius: ;
-}
-
-table th,
-table td {
-    padding: 5px;
-    border: 1px solid #000;
-    text-align: left;
-}
-
-table th {
-    background-color: #969696;
-}
-
-table td {
-    background-color: #969696;
-
-}
 
 .delete-btn, .edit-btn, .btn {
     /*margin-right: 20px;
     */
-    width: 100px;
+    width: 100%;
     background-color: #008080 !important;
     font-size: 1.2rem;
     color: white !important;
@@ -169,7 +207,15 @@ table td {
     cursor: pointer;
 }
 
+.custom-check {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.25rem;
+}
 
+.form-check-input {
+    margin-right: 0.5rem;
+}
 
 
 
