--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,18 @@
-<%- include('partials/header', {title: 'Upgrade Study App', styles:
-'css/home.css'}) %>
-
+<%- include('partials/header', {title: 'Upgrade Study App'}) %>
 <div class="dark-overlay"></div>
-<main class="container-fluid mt-5 main-content">
-  <div class="row justify-content-center align-items-center">
-    <div class="col-12 col-md-6 text-center">
-      <h1 class="display-1">Upgrade Study App</h1>
-      <p class="lead">Get Ready For That Upgrade!</p>
+<div
+  class="landing-page d-flex align-items-center justify-content-center text-center flex-grow-1"
+>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="display-3 text-white">Upgrade Study App</h1>
+        <p class="lead text-white">
+          The app that will help you ace your upgrade
+        </p>
+        <p class="mb-0 text-white">Developed By: Andrew Butler</p>
+      </div>
     </div>
   </div>
-  <hr />
-  <div class="row justify-content-center align-items-center mt-5">
-    <div class="col-12 col-md-6 text-center">
-      <h2 class="mb-4">
-        The app that will help you get ready for your upgrade class.
-      </h2>
-      <p class="lead">Developed by: Andrew Butler</p>
-    </div>
-  </div>
-</main>
-
+</div>
 <footer><%- include('partials/footer') %></footer>
