--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -1,11 +1,10 @@
-<%- include('../partials/header', {title: 'Create Question', styles:
-'../css/addquestion.css'}) %>
+<%- include('../partials/header', {title: 'Upgrade Study App'}) %>
 
 <div class="dark-overlay"></div>
-<main class="container mt-5 main-content">
+<div class="container main-content mt-5">
   <div class="row justify-content-center align-items-center">
-    <div class="col-12 col-md-6 text-center">
-      <h1 class="display-4">Add A Question</h1>
+    <div class="col-12 text-center">
+      <h1 class="display-1">Add A Question</h1>
 
       <form
         id="create-question-form"
@@ -15,6 +14,7 @@
       >
         <div class="form-group">
           <label
+            class="text-white display-4"
             for="question"
             style="font-size: 1.25rem; margin-bottom: 0.5rem"
             >Question:</label
@@ -28,68 +28,44 @@
           />
         </div>
 
+        <!-- ... -->
         <div class="form-group">
           <label
+            class="text-white display-4"
             for="category"
             style="font-size: 1.25rem; margin-bottom: 0.5rem"
             >Category:</label
           >
           <div class="row">
-            <div class="col-md-6 text-left">
+            <% categories.forEach(function(category, index) { %>
+            <div class="col-12 col-md-6 text-left mb-3">
               <div class="form-check">
                 <input
                   class="form-check-input"
                   type="checkbox"
-                  id="category1"
+                  id="category<%= category.id %>"
                   name="category"
-                  value="limitations"
+                  value="<%= category.value %>"
                 />
-                <label class="form-check-label" for="category1"
-                  >Limitations</label
+                <label
+                  class="form-check-label"
+                  for="category<%= category.id %>"
                 >
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="category2"
-                  name="category"
-                  value="deice"
-                />
-                <label class="form-check-label" for="category2">Deice</label>
+                  <%= category.name %>
+                </label>
               </div>
             </div>
-            <div class="col-md-6 text-left">
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="category3"
-                  name="category"
-                  value="human-factors"
-                />
-                <label class="form-check-label" for="category3"
-                  >Human Factors</label
-                >
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="category4"
-                  name="category"
-                  value="memory-items"
-                />
-                <label class="form-check-label" for="category4"
-                  >Memory Items</label
-                >
-              </div>
-            </div>
+            <% }); %>
           </div>
         </div>
 
+        <!-- ... -->
+
         <div class="form-group">
-          <label for="answer" style="font-size: 1.25rem; margin-bottom: 0.5rem"
+          <label
+            class="text-white display-4"
+            for="answer"
+            style="font-size: 1.25rem; margin-bottom: 0.5rem"
             >Answer:</label
           >
           <input
@@ -101,12 +77,16 @@
           />
         </div>
 
-        <button type="submit" class="btn btn-primary" style="margin-top: 1rem">
+        <button
+          type="submit"
+          class="btn btn-primary mb-5"
+          style="margin-top: 1rem"
+        >
           Create Question
         </button>
       </form>
     </div>
   </div>
-  <script src="../js/createQuestion.js"></script>
-  <%- include('../partials/footer') %>
-</main>
+</div>
+<script src="../js/createQuestion.js"></script>
+<%- include('../partials/footer') %>
