--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,7 @@ body {
     background-size: cover;
     display: flex;
     flex-direction: column;
+    /* min-height: 100vh; */
 }
 
 .landing-page {
@@ -93,6 +94,8 @@ table td {
     flex: 1 0 auto;
 }
 
+
+
 .card-text {
     font-size: 1.5rem;
 }
@@ -115,6 +118,16 @@ table td {
     min-height: 150px;
 }
 
+#create-question-form {
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    border: 1px solid lightgrey;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 .form-check-input {
     margin-right: 0.5rem;
     width: 1.5rem;
@@ -122,7 +135,7 @@ table td {
 }
 
 .form-check-label {
-    font-size: 1.5rem;
+    font-size: 0.9rem;
 }
 
 
@@ -134,10 +147,12 @@ footer {
     align-items: center;
     height: 50px;
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
     flex-shrink: 0;
+
+}
+
+.footer-container {
+    margin-top: auto;
 }
 
 .navbar {
