--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -1,92 +1,82 @@
 <%- include('../partials/header', {title: 'Upgrade Study App'}) %>
 
 <div class="dark-overlay"></div>
-<div class="container main-content mt-5">
+<div class="container-fluid main-content mt-5">
   <div class="row justify-content-center align-items-center">
     <div class="col-12 text-center">
-      <h1 class="display-1">Add A Question</h1>
-
-      <form
-        id="create-question-form"
-        method="post"
-        enctype="multipart/form-data"
-        action="/questions/create"
-      >
-        <div class="form-group">
-          <label
-            class="text-white display-4"
-            for="question"
-            style="font-size: 1.25rem; margin-bottom: 0.5rem"
-            >Question:</label
+      <h1 class="display-1 mt-5">Add A Question</h1>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6">
+          <form
+            id="create-question-form"
+            method="post"
+            enctype="multipart/form-data"
+            action="/questions/create"
+            class="p-4"
           >
-          <input
-            type="text"
-            id="question"
-            name="question"
-            class="form-control"
-            required
-          />
-        </div>
+            <div class="form-group">
+              <label class="text-white mb-3 display-6" for="question"
+                >Question</label
+              >
+              <input
+                type="text"
+                id="question"
+                name="question"
+                class="form-control"
+                required
+              />
+            </div>
+            <hr class="text-white" />
 
-        <!-- ... -->
-        <div class="form-group">
-          <label
-            class="text-white display-4"
-            for="category"
-            style="font-size: 1.25rem; margin-bottom: 0.5rem"
-            >Category:</label
-          >
-          <div class="row">
-            <% categories.forEach(function(category, index) { %>
-            <div class="col-12 col-md-6 text-left mb-3">
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="category<%= category.id %>"
-                  name="category"
-                  value="<%= category.value %>"
-                />
-                <label
-                  class="form-check-label"
-                  for="category<%= category.id %>"
-                >
-                  <%= category.name %>
-                </label>
+            <div class="form-group">
+              <label class="text-white mb-3 display-6" for="category"
+                >Category</label
+              >
+              <div class="row">
+                <% categories.forEach(function(category, index) { %>
+                <div class="col-12 col-md-3 text-left mb-3">
+                  <div class="form-check d-flex align-items-center">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="category<%= category.id %>"
+                      name="category"
+                      value="<%= category.value %>"
+                    />
+                    <label
+                      class="form-check-label text-white mb-0 ms-2"
+                      for="category<%= category.id %>"
+                    >
+                      <%= category.name %>
+                    </label>
+                  </div>
+                </div>
+                <% }); %>
               </div>
             </div>
-            <% }); %>
-          </div>
+
+            <hr class="text-white" />
+            <div class="form-group">
+              <label class="text-white mb-3 display-6" for="answer"
+                >Answer</label
+              >
+
+              <input
+                type="text"
+                id="answer"
+                name="answer"
+                class="form-control"
+                required
+              />
+            </div>
+
+            <button type="submit" class="btn w-100 mt-3">
+              Create Question
+            </button>
+          </form>
         </div>
-
-        <!-- ... -->
-
-        <div class="form-group">
-          <label
-            class="text-white display-4"
-            for="answer"
-            style="font-size: 1.25rem; margin-bottom: 0.5rem"
-            >Answer:</label
-          >
-          <input
-            type="text"
-            id="answer"
-            name="answer"
-            class="form-control"
-            required
-          />
-        </div>
-
-        <button
-          type="submit"
-          class="btn btn-primary mb-5"
-          style="margin-top: 1rem"
-        >
-          Create Question
-        </button>
-      </form>
+      </div>
     </div>
   </div>
 </div>
 <script src="../js/createQuestion.js"></script>
-<%- include('../partials/footer') %>
