--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -267,43 +267,28 @@ footer {
 }
 
 .checkbox-container {
-    height: auto;
-    border: 1px solid gray;
-    border-radius: 7px;
-    margin-left: 20px;
-    width: 90%;
-    padding: 5px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    -ms-border-radius: 7px;
-    -o-border-radius: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: none;
+    padding: 20px;
+    border-radius: 5px;
+    flex-wrap: wrap;
 }
 
 .form-check-label {
-    /* margin-left: 1.5rem; */
     color: #fff;
-}
-
-.form-group label {
+    font-size: 1.1rem;
     font-weight: bold;
+    margin-left: 5px;
 }
 
-.form-group input[type="text"] {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 16px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
+.form-check-input:checked {
+    background-color: #2a9df4;
+    border-color: #2a9df4;
 }
 
-.form-check-label {
-    font-weight: normal;
-}
+
 
 @media (max-width: 576px) {
     .navbar {
@@ -322,14 +307,13 @@ footer {
         font-size: 3rem;
     }
 
-    .form-check-input {
-        position: static;
-        margin-top: 0.5rem;
-        margin-left: 0;
+    .form-check-label {
+        font-size: 1rem;
     }
 
-    .form-check-label {
-        margin-left: 2rem;
+
+    .form-check:last-child {
+        margin-bottom: 0;
     }
 
 
