--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -70,17 +70,12 @@ table td {
 
 
 .card {
-    max-width: 50%;
+    max-width: 30%;
     margin-bottom: 2rem;
+    min-height: 250px;
 }
 
-.card-img-top {
-    border-radius: 10px 10px 0 0;
-    -webkit-border-radius: 10px 10px 0 0;
-    -moz-border-radius: 10px 10px 0 0;
-    -ms-border-radius: 10px 10px 0 0;
-    -o-border-radius: 10px 10px 0 0;
-}
+
 
 .card-title {
     font-size: 2rem;
@@ -94,8 +89,6 @@ table td {
     flex: 1 0 auto;
 }
 
-
-
 .card-text {
     font-size: 1.5rem;
 }
@@ -103,6 +96,7 @@ table td {
 .card-body {
     max-height: 70vh;
     overflow-y: auto;
+    background-color: none;
 }
 
 .hide {
@@ -187,7 +181,6 @@ footer {
 
 
 .btn {
-    /* width: 100%; */
     background-color: #008080 !important;
     font-size: 1.2rem;
     color: white !important;
@@ -230,6 +223,56 @@ footer {
     color: #fff;
 }
 
+.btn-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.btn-primary {
+    margin-bottom: 10px;
+    height: 50px;
+    width: 200px;
+    background-color: rgba(0, 128, 0, 0.7);
+    border: none;
+    border-radius: 150px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    -ms-border-radius: 150px;
+    -o-border-radius: 150px;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.btn-primary:hover {
+    background-color: rgba(0, 86, 179, 0.8);
+
+    color: #fff;
+}
+
+.btn-secondary {
+    background-color: rgba(0, 86, 179, 0.8);
+    border: none;
+
+    height: 50px;
+    width: 100px;
+    border-radius: 150px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    -ms-border-radius: 150px;
+    -o-border-radius: 150px;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #000;
+}
+
+.btn-secondary:hover {
+    background-color: rgba(0, 128, 0, 0.7);
+
+    color: #fff;
+}
+
 .custom-check {
     display: flex;
     align-items: center;
@@ -260,11 +303,7 @@ footer {
     margin-left: -1.25rem;
 }
 
-.btn-container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2rem;
-}
+
 
 .checkbox-container {
     display: flex;
@@ -308,7 +347,7 @@ footer {
     }
 
     .form-check-label {
-        font-size: 1rem;
+        font-size: 0.7rem;
     }
 
 
@@ -331,6 +370,18 @@ footer {
         font-weight: 900;
         font-size: 1.6rem;
         color: orange;
+    }
+
+    .card {
+        max-width: 100%;
+        margin-bottom: 2rem;
+        background-color: none !important;
+        min-width: 50%;
+        min-height: 250px;
+    }
+
+    .btn-container {
+        flex-direction: column;
     }
 }
 
@@ -366,10 +417,7 @@ footer {
         margin-top: 10px;
     }
 
-    .card {
-        min-width: 90%;
-        min-height: 250px;
-    }
+
 
     .btn-container {
         display: flex;
