--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header', {title: 'Upgrade Study App'}) %>
+<%- include('../partials/header', {title: 'Add New Questions'}) %>
 
 <div class="dark-overlay"></div>
 <div class="container-fluid main-content mt-5">
@@ -70,7 +70,11 @@
               />
             </div>
 
-            <button type="submit" class="btn w-100 mt-3">
+            <button
+              type="submit"
+              id="create-question-btn"
+              class="btn w-100 mt-3"
+            >
               Create Question
             </button>
           </form>
