--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -32,11 +32,12 @@
     <div class="container">
       <div class="card mx-auto">
         <div class="card-body">
-          <h5 id="question" class="card-title"></h5>
+          <h5 id="question" class="card-title text-center"></h5>
+          <hr />
           <h6 id="quiz-category"></h6>
           <hr />
           <div class="answer-wrapper">
-            <p id="answer" class="card-text answer hide"></p>
+            <p id="answer" class="card-text text-center answer hide"></p>
           </div>
           <div class="btn-container mt-3">
             <div class="d-flex flex-column flex-md-row justify-content-center">
