--- a/views/questions/view-questions.ejs
+++ b/views/questions/view-questions.ejs
@@ -3,7 +3,7 @@
 <div class="container mt-5 main-content">
   <div class="row justify-content-center align-items-center">
     <div class="col-12 text-center">
-      <h1 class="display-1">All Questions</h1>
+      <h1 class="display-1 mt-5">All Questions</h1>
       <div class="table-responsive">
         <table class="table table-bordered">
           <thead>
@@ -28,3 +28,11 @@
     </div>
   </div>
 </div>
+
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+  crossorigin="anonymous"
+></script>
+</body>
+</html>
