adding randomize functionality

--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -23,6 +23,7 @@
                 id="question"
                 name="question"
                 class="form-control"
+                autocomplete="off"
                 required
               />
             </div>
@@ -66,6 +67,7 @@
                 id="answer"
                 name="answer"
                 class="form-control"
+                autocomplete="off"
                 required
               />
             </div>
