--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,6 +74,9 @@ table td {
     max-width: 30%;
     margin-bottom: 2rem;
     min-height: 250px;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: #fff;
+    border: 1px solid white;
 }
 
 
@@ -235,7 +238,7 @@ footer {
     margin-bottom: 10px;
     height: 50px;
     width: 200px;
-    background-color: rgba(0, 128, 0, 0.7);
+    background-color: rgba(0, 128, 0, 0.9);
     border: none;
     border-radius: 150px;
     -webkit-border-radius: 150px;
@@ -253,7 +256,7 @@ footer {
 }
 
 .btn-secondary {
-    background-color: rgba(0, 86, 179, 0.8);
+    background-color: rgba(0, 86, 179, 0.9);
     border: none;
 
     height: 50px;
