--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,6 +48,13 @@
             <li class="nav-item">
               <a class="nav-link" href="/quiz">Start Quiz!</a>
             </li>
+            <li class="nav-item">
+              <a href="/register"  id="register-btn">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a href="/login" id="login-btn">Login</a>
+            </li>
+            
           </ul>
         </div>
       </div>
