--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -13,7 +13,7 @@
             type="checkbox"
             id="showAnswersCheckbox"
           />
-          <label class="form-check-label" for="showAnswersCheckbox">
+          <label class="form-check-label text-white" for="showAnswersCheckbox">
             Show Answers
           </label>
         </div>
@@ -23,14 +23,14 @@
             type="checkbox"
             id="randomizeCheckbox"
           />
-          <label class="form-check-label" for="randomizeCheckbox">
+          <label class="form-check-label text-white" for="randomizeCheckbox">
             Randomize
           </label>
         </div>
       </div>
     </div>
     <div class="container">
-      <div class="card mx-auto">
+      <div class="card mx-auto w-xs-90">
         <div class="card-body">
           <h5 id="question" class="card-title text-center"></h5>
           <hr />
@@ -53,5 +53,5 @@
     </div>
   </div>
 </div>
-
 <script src="js/quiz.js"></script>
+<%-include('./partials/footer') %>
