--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,396 +1,48 @@
-html,
 body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: 'Merriweather', serif;
-}
-
-body {
+    background-attachment: fixed;
     background-image: url("https://images.unsplash.com/photo-1517260468809-807bfd11d968?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80");
-    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
-    /* min-height: 100vh; */
-}
-
-.landing-page {
-    min-height: 100vh;
-}
-
-.flex-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin-top: 30vh;
-}
-
-.title {
-    color: #fff;
-}
-
-/* Display all questions page styles */
-table {
-    margin: 0 auto;
-    border-collapse: collapse;
-    border-radius: 10px;
-    width: 100%;
-
-}
-
-thead {
-    background-color: gray;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-
-table th,
-table td {
-    padding: 5px;
-    text-align: left;
-}
-
-table th {
-    background-color: #969696;
-    color: #fff;
-}
-
-table td {
-    background-color: #f5f5f5;
-    color: #fff;
-    font-size: 1.2rem;
-}
-
-.lead {
-    margin-top: 40px;
-    font-size: 1.5rem;
-}
-
-
-.card {
-    max-width: 30%;
-    margin-bottom: 2rem;
-    min-height: 250px;
-    background-color: rgba(0, 0, 0, 0.3);
-    color: #fff;
-    border: 1px solid white;
-}
-
-
-
-.card-title {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    min-height: 100px;
-}
-
-
-.main {
-    flex: 1 0 auto;
-}
-
-.card-text {
-    font-size: 1.5rem;
-}
-
-.card-body {
-    max-height: 70vh;
-    overflow-y: auto;
-    background-color: none;
-}
-
-.hide {
-    opacity: 0;
-}
-
-.show {
-    opacity: 1;
-}
-
-.answer-wrapper {
-    margin-bottom: 2rem;
-    min-height: 150px;
-}
-
-#create-question-form {
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    border: 1px solid lightgrey;
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-.form-check-input {
-    margin-right: 0.5rem;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.form-check-label {
-    font-size: 0.9rem;
-}
-
-
-footer {
-    background-color: #333;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    width: 100%;
-    flex-shrink: 0;
-
-}
-
-.footer-container {
-    margin-top: auto;
-}
-
-.navbar {
-    padding: 0.5rem 1rem;
-    font-size: 1.1rem;
-}
-
-.navbar-brand {
-    font-size: 1.2rem;
-}
-
-.nav-item {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-}
-
-.dark-overlay {
-    background-color: rgba(0, 0, 0, 0.7);
-    position: absolute;
-    top: 0;
-    left: 0;
+    font-family: 'Merriweather', serif;
     height: 100%;
-    width: 100%;
-    z-index: -1;
+    margin: 0;
+    min-height: 100vh;
+    padding: 0;
 }
 
-.display-1 {
-    font-size: 8rem;
-    margin-bottom: 1rem;
-    color: #fff;
-}
-
-
-.btn {
-    background-color: #008080 !important;
-    font-size: 1.2rem;
-    color: white !important;
-    padding: 10px 20px;
-    border-radius: 7px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    -ms-border-radius: 7px;
-    -o-border-radius: 7px;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#edit-btn, #delete-btn {
-    width: 30%;
-    margin: 2px;
-    border: none;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-
-#delete-btn {
-    background-color: red;
-}
-
-#edit-btn {
-    background-color: blue;
-}
-
-#delete-btn:hover {
-    background-color: rgba(255, 0, 0, 0.6);
-    color: #fff;
-}
-
-#edit-btn:hover {
-    background-color: rgba(0, 0, 255, 0.6);
-    color: #fff;
-}
-
-.btn-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-.btn-primary {
-    margin-bottom: 10px;
-    height: 50px;
-    width: 200px;
-    background-color: rgba(0, 128, 0, 0.9);
-    border: none;
-    border-radius: 150px;
-    -webkit-border-radius: 150px;
-    -moz-border-radius: 150px;
-    -ms-border-radius: 150px;
-    -o-border-radius: 150px;
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-
-.btn-primary:hover {
-    background-color: rgba(0, 86, 179, 0.8);
-    color: #fff;
-}
-
-.btn-secondary {
-    background-color: rgba(0, 86, 179, 0.9);
-    border: none;
-
-    height: 50px;
-    width: 100px;
-    border-radius: 150px;
-    -webkit-border-radius: 150px;
-    -moz-border-radius: 150px;
-    -ms-border-radius: 150px;
-    -o-border-radius: 150px;
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #000;
-}
-
-.btn-secondary:hover {
-    background-color: rgba(0, 128, 0, 0.7);
-
-    color: #fff;
-}
-
-#create-question-btn {
-    font-size: 20px;
-}
-
-#create-question-btn:hover {
-
-    color: black !important;
-}
-
-/* Custom styles for register button */
-#register-btn {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    padding: 5px 24px;
-    border-radius: 4px;
-    transition-duration: 0.4s;
-
-}
-
-#register-btn:hover {
-    background-color: white;
-    color: #4CAF50;
-}
-
-/* Custom styles for login button */
-#login-btn {
-    background-color: #008CBA;
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    padding: 5px 24px;
-    border-radius: 4px;
-    transition-duration: 0.4s;
-}
-
-#login-btn:hover {
-    background-color: white;
-    color: #008CBA;
-}
-
-
-.custom-check {
-    display: flex;
-    align-items: center;
-    margin-bottom: 0.25rem;
-}
-
-.form-check-input {
-    margin-right: 0.5rem;
-}
-
-#question, #answer {
-    font-size: 20px;
-}
-
-.actions {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Bootstrap styles */
-
-.form-group {
-    margin-bottom: 1rem;
-}
-
-.form-check-input {
-    position: absolute;
-    margin-top: 0.25rem;
-    margin-left: -1.25rem;
-}
-
-
-
-.checkbox-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: none;
-    padding: 20px;
-    border-radius: 5px;
-    flex-wrap: wrap;
-}
-
-.form-check-label {
-    color: #fff;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-left: 5px;
-}
-
-.form-check-input:checked {
-    background-color: #2a9df4;
-    border-color: #2a9df4;
-}
-
-
-
+/* Media queries */
 @media (max-width: 576px) {
+    .btn-container {
+        flex-direction: column;
+    }
+
+    .card {
+        background-color: none !important;
+        margin-bottom: 2rem;
+        min-height: 250px;
+        width: 100%;
+    }
+
+    .display-1 {
+        font-size: 2rem;
+
+    }
+
+    .form-check:last-child {
+        margin-bottom: 0;
+    }
+
+    .form-check-label {
+        font-size: 0.7rem;
+    }
+
+    .lead {
+        font-size: 1.2rem;
+    }
+
     .navbar {
         font-size: 0.9rem;
     }
@@ -399,73 +51,55 @@ footer {
         font-size: 1.2rem;
     }
 
-    .lead {
-        font-size: 1.2rem;
-
-    }
-
-    .display-1 {
-        font-size: 3rem;
-    }
-
-    .form-check-label {
-        font-size: 0.7rem;
-    }
-
-
-    .form-check:last-child {
-        margin-bottom: 0;
-    }
-
-
-    #questions-question {
-        font-size: 1.5rem;
-        color: green;
+    #questions-answer {
+        color: orange;
+        font-size: 1.6rem;
+        font-weight: 900;
     }
 
     #questions-category {
-        font-size: 1rem;
         color: blue;
+        font-size: 1rem;
     }
 
-    #questions-answer {
-        font-weight: 900;
-        font-size: 1.6rem;
-        color: orange;
+    #questions-question {
+        color: green;
+        font-size: 1.5rem;
     }
 
-    .card {
-        max-width: 100%;
-        margin-bottom: 2rem;
-        background-color: none !important;
-        min-width: 50%;
-        min-height: 250px;
-    }
-
-    .btn-container {
-        flex-direction: column;
-    }
-
-    #register-btn, #login-btn {
+    #register-btn,
+    #login-btn {
         font-size: 14px;
         padding: 4px 16px;
         width: 100%;
     }
-
 }
 
-
-
 @media (max-width: 767px) {
-    table {
-        display: block;
+    .btn-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
-    table thead,
-    table tbody,
-    table tr,
-    table td,
-    table th {
+    .btn-container .btn {
+        margin-bottom: 0.5rem;
+        width: 100%;
+    }
+
+    .btn-container .btn:last-child {
+        margin-bottom: 0;
+    }
+
+    .btn-container .btn-success {
+        margin-right: 0;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    table {
         display: block;
     }
 
@@ -486,23 +120,428 @@ footer {
         margin-top: 10px;
     }
 
-
-    .btn-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+    table thead,
+    table tbody,
+    table tr,
+    table td,
+    table th {
+        display: block;
     }
+}
 
-    .btn-container .btn {
-        width: 100%;
-        margin-bottom: 0.5rem;
+@media (min-width: 992px) {
+    .card {
+        width: 30%;
     }
+}
 
-    .btn-container .btn:last-child {
-        margin-bottom: 0;
-    }
+/* General styles */
+.actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    .btn-container .btn-success {
-        margin-right: 0;
-    }
+.answer-wrapper {
+    margin-bottom: 2rem;
+    min-height: 150px;
+}
+
+.btn {
+    background-color: #008080 !important;
+    color: white !important;
+    cursor: pointer;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    font-size: 1.2rem;
+    padding: 10px 20px;
+    text-decoration: none;
+}
+
+.btn-container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.btn-primary {
+    background-color: rgba(0, 128, 0, 0.9);
+    border: none;
+    border-radius: 150px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    -ms-border-radius: 150px;
+    -o-border-radius: 150px;
+    font-size: 1.5rem;
+    font-weight: 700;
+    height: 50px;
+    margin-bottom: 10px;
+    width: 200px;
+}
+
+.btn-primary:hover {
+    background-color: rgba(0, 86, 179, 0.8);
+    color: #fff;
+}
+
+.btn-secondary {
+    background-color: rgba(0, 86, 179, 0.9);
+    border: none;
+    border-radius: 150px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    -ms-border-radius: 150px;
+    -o-border-radius: 150px;
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: 700;
+    height: 50px;
+    width: 100px;
+}
+
+.btn-secondary:hover {
+    background-color: rgba(0, 128, 0, 0.7);
+    color: #fff;
+}
+
+.card {
+    background-color: rgba(0, 0, 0, 0.3);
+    border: 1px solid white;
+    color: #fff;
+    /* max-width: 50%; */
+    margin-bottom: 2rem;
+    min-height: 250px;
+}
+
+.card-body {
+    background-color: none;
+    max-height: 70vh;
+    overflow-y: auto;
+}
+
+.card-text {
+    font-size: 1.5rem;
+}
+
+.card-title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    min-height: 100px;
+}
+
+.checkbox-container {
+    align-items: center;
+    background-color: none;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
+.create-question-form {
+    background-color: rgba(0, 0, 0, 0.2);
+    border: 1px solid lightgrey;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.custom-check {
+    align-items: center;
+    display: flex;
+    margin-bottom: 0.25rem;
+}
+
+.dark-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+.display-1 {
+    color: #fff;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30vh;
+    min-height: 100vh;
+}
+
+.footer-container {
+    margin-top: auto;
+}
+
+form-check-input {
+    margin-right: 0.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+form-check-label {
+    color: #fff;
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin-left: 5px;
+}
+
+form-group {
+    margin-bottom: 1rem;
+}
+
+.hide {
+    opacity: 0;
+}
+
+.landing-page {
+    min-height: calc(100vh - 50px);
+}
+
+.lead {
+    font-size: 1.5rem;
+    margin-top: 40px;
+}
+
+.main {
+    flex: 1 0 auto;
+}
+
+.nav-item {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
+.navbar {
+    font-size: 1.1rem;
+    padding: 0.5rem 1rem;
+}
+
+.navbar-brand {
+    font-size: 1.2rem;
+}
+
+.show {
+    opacity: 1;
+}
+
+table {
+    border-collapse: collapse;
+    border-radius: 10px;
+    margin: 0 auto;
+    width: 100%;
+}
+
+table th,
+table td {
+    padding: 5px;
+    text-align: left;
+}
+
+table th {
+    background-color: #969696;
+    color: #fff;
+}
+
+table td {
+    background-color: #f5f5f5;
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+thead {
+    background-color: gray;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.title {
+    color: #fff;
+}
+
+footer {
+    align-items: center;
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    flex-shrink: 0;
+    height: 50px;
+    justify-content: center;
+    width: 100%;
+}
+
+/* Button styles */
+
+#answer, #question {
+    font-size: 20px;
+}
+
+#create-question-btn {
+    font-size: 20px;
+}
+
+#create-question-btn:hover {
+    color: black !important;
+}
+
+#delete-btn {
+    background-color: red;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    margin: 2px;
+    width: 30%;
+}
+
+#delete-btn:hover {
+    background-color: rgba(255, 0, 0, 0.6);
+    color: #fff;
+}
+
+#edit-btn {
+    background-color: blue;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    margin: 2px;
+    width: 30%;
+}
+
+#edit-btn:hover {
+    background-color: rgba(0, 0, 255, 0.6);
+    color: #fff;
+}
+
+.btn {
+    background-color: #008080 !important;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    color: white !important;
+    cursor: pointer;
+    font-size: 1.2rem;
+    padding: 10px 20px;
+    text-decoration: none;
+}
+
+.btn-container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.btn-primary {
+    background-color: rgba(0, 128, 0, 0.9);
+    border: none;
+    border-radius: 150px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    -ms-border-radius: 150px;
+    -o-border-radius: 150px;
+    font-size: 1.5rem;
+    font-weight: 700;
+    height: 50px;
+    margin-bottom: 10px;
+    width: 200px;
+}
+
+.btn-primary:hover {
+    background-color: rgba(0, 86, 179, 0.8);
+    color: #fff;
+}
+
+.btn-secondary {
+    background-color: rgba(0, 86, 179, 0.9);
+    border: none;
+    border-radius: 150px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    -ms-border-radius: 150px;
+    -o-border-radius: 150px;
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: 700;
+    height: 50px;
+    width: 100px;
+}
+
+.btn-secondary:hover {
+    background-color: rgba(0, 128, 0, 0.7);
+    color: #fff;
+}
+
+#register-btn {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    padding: 5px 24px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    transition-duration: 0.4s;
+}
+
+#register-btn:hover {
+    background-color: white;
+    color: #4CAF50;
+}
+
+#login-btn {
+    background-color: #008CBA;
+    border: none;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    padding: 5px 24px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+    transition-duration: 0.4s;
+}
+
+#login-btn:hover {
+    background-color: white;
+    color: #008CBA;
+}
+
+#quiz-category {
+    min-height: 100px;
+}
+
+#question {
+    min-height: 150px;
 }
