--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,14 @@
 <%- include('partials/header', {title: 'Upgrade Study App'}) %>
 <div class="dark-overlay"></div>
 <div
-  class="landing-page d-flex align-items-center justify-content-center text-center flex-grow-1"
+  class="landing-page d-flex align-items-center justify-content-center text-center"
 >
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1 class="display-1 text-white">Upgrade Study App</h1>
-        <p class="lead text-white">
-          The app that will help you ace your upgrade
-        </p>
-        <p class="mb-0 text-white">Developed By: Andrew Butler</p>
-      </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="display-1 text-white">Upgrade Study App</h1>
+      <p class="lead text-white">The app that will help you ace your upgrade</p>
+      <p class="mb-0 text-white">Developed By: Andrew Butler</p>
     </div>
   </div>
 </div>
-<footer><%- include('partials/footer') %></footer>
+<%- include('./partials/footer') %>
