--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,9 @@
       <h1 class="display-1 text-white">Upgrade Study App</h1>
       <p class="lead text-white">The app that will help you ace your upgrade</p>
       <p class="mb-0 text-white">Developed By: Andrew Butler</p>
+      <br />
+      <hr />
+      <p class="mb-0 text-white">Version 1.0.0 | Released 4.9.23</p>
     </div>
   </div>
 </div>
