--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -412,7 +412,8 @@ footer {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     margin: 2px;
-    width: 30%;
+    width: 100%;
+    padding: 5px;
 }
 
 #delete-btn:hover {
@@ -429,7 +430,8 @@ footer {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     margin: 2px;
-    width: 30%;
+    width: 100%;
+    padding: 5px;
 }
 
 #edit-btn:hover {
