--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -3,10 +3,10 @@
 <div
   class="container-fluid d-flex flex-column justify-content-center min-vh-100"
 >
-  <h1 class="text-center my-4 display-1">Quiz Time!</h1>
+  <h1 class="text-center my-1 display-1">Quiz Time!</h1>
   <div class="row">
     <div class="col-md-12">
-      <div class="checkbox-container my-4">
+      <div class="checkbox-container my-2">
         <div class="form-check form-check-inline">
           <input
             class="form-check-input"
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="card mx-auto w-xs-90">
+      <div class="card mx-auto">
         <div class="card-body">
           <h5 id="question" class="card-title text-center"></h5>
           <hr />
@@ -39,7 +39,7 @@
           <div class="answer-wrapper">
             <p id="answer" class="card-text text-center answer hide"></p>
           </div>
-          <div class="btn-container mt-3">
+          <div class="btn-container">
             <div class="d-flex flex-column flex-md-row justify-content-center">
               <button class="btn-primary" id="show-answer">Show Answer</button>
             </div>
