--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -34,7 +34,9 @@
               <hr class="text-white" />
               <div class="row">
                 <% categories.forEach(function(category, index) { %>
-                <div class="col-12 col-md-3 text-left mb-3">
+                <div
+                  class="col-sm-12 col-md-6 col-lg-4 col-xl-3 text-left mb-3"
+                >
                   <div class="form-check d-flex align-items-center">
                     <input
                       class="form-check-input"
