--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,22 @@
 <%- include('partials/header', {title: 'Upgrade Study App'}) %>
-<div class="dark-overlay"></div>
-<div
-  class="landing-page d-flex align-items-center justify-content-center text-center"
->
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="display-1 text-white">Upgrade Study App</h1>
-      <p class="lead text-white">The app that will help you ace your upgrade</p>
-      <p class="mb-0 text-white">Developed By: Andrew Butler</p>
-      <br />
-      <hr />
-      <p class="mb-0 text-white">Version 1.0.0 | Released 4.9.23</p>
+
+<section class="hero is-fullheight-with-navbar is-primary">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <div class="columns is-vcentered">
+        <div class="column is-12">
+          <h1 class="title is-1 has-text-white">Upgrade Study App</h1>
+          <p class="subtitle has-text-white">
+            The app that will help you ace your upgrade
+          </p>
+          <p class="mb-0 has-text-white">Developed By: Andrew Butler</p>
+          <br />
+          <hr />
+          <p class="mb-0 has-text-white">Version 1.0.0 | Released 4.9.23</p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</section>
+
 <%- include('./partials/footer') %>
