--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,60 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    /> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <!-- <link rel="stylesheet" href="../css/styles.css"> -->
+    <link rel="stylesheet" href="../css/bulma/css/bulma.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-icons@1.6.1/dist/css/bulma-icons.min.css" />
+    <% const stylesheet = locals.style || null; %>
+    <% if(stylesheet) { %>
+      <link rel="stylesheet" href="<%= style %>">
+    <% } %>
+    <script src="https://kit.fontawesome.com/082eaaba14.js" crossorigin="anonymous"></script>
+    <script src="../js/navbar.js"></script>
+
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Upgrade App</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a href="/" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/questions/create">Add Questions</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/modify-questions">Edit/Delete Questions</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/view-questions">View All Questions</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/quiz">Start Quiz!</a>
-            </li>
-            <li class="nav-item">
-              <a href="/register"  id="register-btn">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a href="/login" id="login-btn">Login</a>
-            </li>
-            
-          </ul>
+   
+ <nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="#">
+      
+      <h1>Let's UPGRADE!</h1>
+    </a>
+
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" href="/">
+        Home
+      </a>
+
+      <a class="navbar-item" href="/quiz">
+        Start Quiz!
+      </a>
+
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">
+          More Options
+        </a>
+
+        <div class="navbar-dropdown">
+          <a class="navbar-item" href="/questions/create">
+            Add Questions
+          </a>
+          <a class="navbar-item" href="/modify-questions">
+            Edit/Remove Questions
+          </a>
+          <a class="navbar-item" href="/view-questions">
+            View All Questions
+          </a>
+          
         </div>
       </div>
-    </nav>
+    </div>
 
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+          <a class="button is-primary">
+            <strong>Sign up</strong>
+          </a>
+          <a class="button is-light">
+            Log in
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
