--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -1,6 +1,79 @@
 <%- include('../partials/header', {title: 'Add New Questions'}) %>
 
-<div class="dark-overlay"></div>
+<div class="container mt-5">
+  <div class="columns is-centered">
+    <div class="column is-8">
+      <div class="is-paddingless px-3">
+        <h1 class="title is-1 has-text-centered">Add A Question</h1>
+        <form
+          id="create-question-form"
+          method="post"
+          enctype="multipart/form-data"
+          action="/questions/create"
+        >
+          <div class="field">
+            <label class="label" for="question">Question</label>
+            <div class="control">
+              <input
+                type="text"
+                id="question"
+                name="question"
+                class="input"
+                autocomplete="off"
+                placeholder="Question"
+                required
+              />
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label" for="category">Category</label>
+            <div class="control">
+              <div class="select is-fullwidth">
+                <select id="category" name="category">
+                  <% categories.forEach(function(category, index) { %>
+                  <option value="<%= category.value %>">
+                    <%= category.name %>
+                  </option>
+                  <% }); %>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label" for="answer">Answer</label>
+            <div class="control">
+              <input
+                type="text"
+                id="answer"
+                name="answer"
+                class="input"
+                autocomplete="off"
+                placeholder="Answer"
+                required
+              />
+            </div>
+          </div>
+
+          <div class="field">
+            <div class="control">
+              <button
+                type="submit"
+                id="create-question-btn"
+                class="button is-primary is-fullwidth"
+              >
+                Create Question
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="dark-overlay"></div>
 <div class="container-fluid main-content mt-5">
   <div class="row justify-content-center align-items-center">
     <div class="col-12 text-center">
@@ -84,7 +157,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <script src="../js/createQuestion.js"></script>
 <%- include('../partials/footer') %>
