--- a/views/questions/view-questions.ejs
+++ b/views/questions/view-questions.ejs
@@ -1,38 +1,32 @@
-<%- include('../partials/header', {title: 'All Questions'}) %>
-<div class="dark-overlay"></div>
-<div class="container mt-5 main-content">
-  <div class="row justify-content-center align-items-center">
-    <div class="col-12 text-center">
-      <h1 class="display-1 mt-5">All Questions</h1>
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th class="text-center">Question</th>
-              <th class="text-center">Category</th>
-              <th class="text-center">Answer</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <% questions.forEach(function(question) { %>
-            <tr>
-              <td id="questions-question"><%= question.question %></td>
-              <td id="questions-category"><%= question.category %></td>
-              <td id="questions-answer"><%= question.answer %></td>
-            </tr>
-            <% }); %>
-          </tbody>
-        </table>
-      </div>
+<%- include('../partials/header', {title: 'View All Questions', style:
+'../css/customquestions.css'}) %>
+<section class="section">
+  <h1 class="has-text-centered is-size-1-tablet">All Questions In Database</h1>
+  <div class="container">
+    <div class="table-container">
+      <table
+        class="table is-bordered is-striped is-hoverable is-fullwidth is-mobile-custom"
+      >
+        <thead>
+          <tr>
+            <th class="text-center">Question</th>
+            <th class="text-center">Category</th>
+            <th class="text-center">Answer</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% questions.forEach(function(question, index) { %>
+          <tr>
+            <td id="questions-question">
+              #<%= index +1 %> -- <%= question.question %>
+            </td>
+            <td id="questions-category"><%= question.category %></td>
+            <td id="questions-answer"><%= question.answer %></td>
+          </tr>
+          <% }); %>
+        </tbody>
+      </table>
     </div>
   </div>
-</div>
-
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-  crossorigin="anonymous"
-></script>
-</body>
-</html>
+</section>
+<%- include('../partials/footer') %>
