--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,5 +1,44 @@
 <%- include('partials/header', {title: 'Quiz Time!'}) %>
 <div class="dark-overlay"></div>
+<div class="container is-max-desktop">
+  <div class="notification is-primary">
+    <label class="form-check-label text-white" for="showAnswersCheckbox">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        id="showAnswersCheckbox"
+      />
+      Show Answers
+    </label>
+    <div class="card">
+      <header class="card-header">
+        <h5 id="question" class="card-header-title"></h5>
+        <button class="card-header-icon" aria-label="more options">
+          <span class="icon">
+            <i class="fas fa-angle-down" aria-hidden="true"></i>
+          </span>
+        </button>
+      </header>
+      <div class="card-content">
+        <div class="content">
+          <p id="answer" class="card-text text-center answer hide"></p>
+        </div>
+      </div>
+      <footer class="card-footer">
+        <a href="#" class="card-footer-item" id="prev-question"
+          ><button class="button is-small is-info is-light">Prev</button></a
+        >
+        <a href="#" class="card-footer-item" id="show-answer"
+          ><button class="button is-medium is-success">Show Answer</button></a
+        >
+        <a href="#" class="card-footer-item" id="next-question"
+          ><button class="button is-small is-info is-light">Next</button></a
+        >
+      </footer>
+    </div>
+  </div>
+</div>
+
 <div
   class="container-fluid d-flex flex-column justify-content-center min-vh-100"
 >
