--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -1,26 +1,32 @@
-.btn-success {
-    background-color: #4caf50;
-    border-color: #4caf50;
-    font-size: 1.5rem;
-    font-weight: bold;
-    padding: 0.75rem 2rem;
-    margin-right: 1rem;
+.card-text.answer.hide {
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
-.btn-success:hover {
-    background-color: #388e3c;
-    border-color: #388e3c;
+.card-text.answer.show {
+    opacity: 1;
+    max-height: 1000px;
+    transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
-.btn-primary {
-    background-color: #0275d8;
-    border-color: #0275d8;
-    font-size: 1.5rem;
-    font-weight: bold;
-    padding: 0.75rem 2rem;
+.card-text.answer {
+    min-height: 300px;
 }
 
-.btn-primary:hover {
-    background-color: #025aa5;
-    border-color: #025aa5;
+.card-header-title {
+    min-height: 120px;
+    font-size: 1.7rem;
+    text-align: center;
+}
+
+.card {
+    margin: 1rem;
+}
+
+@media (min-width: 769px) {
+    .card {
+        margin: 0;
+    }
 }
