--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,42 +1,48 @@
 <%- include('./partials/header', {title: 'Login'}) %>
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card w-100">
-        <div class="card-header">
-          <h1 class="text-center">Login</h1>
-        </div>
-        <div class="card-body">
-          <form action="/login" method="post">
-            <div class="mb-3">
-              <label for="username" class="form-label">Username:</label>
-              <input
-                type="text"
-                id="username"
-                name="username"
-                required
-                class="form-control"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Password:</label>
-              <input
-                type="password"
-                id="password"
-                name="password"
-                required
-                class="form-control"
-              />
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-          </form>
+<section class="hero is-fullheight is-primary">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-centered">
+        <div class="column is-5">
+          <div class="box">
+            <h1 class="title is-1 has-text-centered has-text-black">Login</h1>
+            <form action="/login" method="post">
+              <div class="field">
+                <label for="username" class="label">Username:</label>
+                <div class="control">
+                  <input
+                    type="text"
+                    id="username"
+                    name="username"
+                    required
+                    class="input"
+                  />
+                </div>
+              </div>
+              <div class="field">
+                <label for="password" class="label">Password:</label>
+                <div class="control">
+                  <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    required
+                    class="input"
+                  />
+                </div>
+              </div>
+              <div class="field">
+                <div class="control">
+                  <button type="submit" class="button is-primary is-fullwidth">
+                    Login
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-  crossorigin="anonymous"
-></script>
+</section>
+<%- include('./partials/footer') %>
