--- a/views/questions/create.ejs
+++ b/views/questions/create.ejs
@@ -29,8 +29,8 @@
           <div class="field">
             <label class="label" for="category">Category</label>
             <div class="control">
-              <div class="select is-fullwidth">
-                <select id="category" name="category">
+              <div class="select is-fullwidth is-multiple">
+                <select id="category" name="category" multiple>
                   <% categories.forEach(function(category, index) { %>
                   <option value="<%= category.value %>">
                     <%= category.name %>
@@ -72,92 +72,6 @@
     </div>
   </div>
 </div>
-
-<!-- <div class="dark-overlay"></div>
-<div class="container-fluid main-content mt-5">
-  <div class="row justify-content-center align-items-center">
-    <div class="col-12 text-center">
-      <h1 class="display-1 mt-5">Add A Question</h1>
-      <div class="row justify-content-center">
-        <div class="col-12 col-md-6 col-lg-6">
-          <form
-            id="create-question-form"
-            method="post"
-            enctype="multipart/form-data"
-            action="/questions/create"
-            class="p-4"
-          >
-            <div class="form-group">
-              <label class="text-white mb-3 display-6" for="question"></label>
-              <input
-                type="text"
-                id="question"
-                name="question"
-                class="form-control"
-                autocomplete="off"
-                placeholder="Question"
-                required
-              />
-            </div>
-            <br />
-            <div class="form-group">
-              <label class="text-white mb-3 display-6" for="category"
-                >Category</label
-              >
-              <hr class="text-white" />
-              <div class="row">
-                <% categories.forEach(function(category, index) { %>
-                <div
-                  class="col-sm-12 col-md-6 col-lg-4 col-xl-3 text-left mb-3"
-                >
-                  <div class="form-check d-flex align-items-center">
-                    <input
-                      class="form-check-input"
-                      type="checkbox"
-                      id="category<%= category.id %>"
-                      name="category"
-                      value="<%= category.value %>"
-                    />
-                    <label
-                      class="form-check-label text-white mb-0 ms-2"
-                      for="category<%= category.id %>"
-                    >
-                      <%= category.name %>
-                    </label>
-                  </div>
-                </div>
-                <% }); %>
-              </div>
-            </div>
-
-            <hr class="text-white" />
-            <div class="form-group">
-              <label class="text-white mb-3 display-6" for="answer"></label>
-
-              <input
-                type="text"
-                id="answer"
-                name="answer"
-                class="form-control"
-                autocomplete="off"
-                placeholder="Answer"
-                required
-              />
-            </div>
-
-            <button
-              type="submit"
-              id="create-question-btn"
-              class="btn w-100 mt-3"
-            >
-              Create Question
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
 
 <script src="../js/createQuestion.js"></script>
 <%- include('../partials/footer') %>
