--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,96 +1,43 @@
-<%- include('partials/header', {title: 'Quiz Time!'}) %>
-<div class="dark-overlay"></div>
-<div class="container is-max-desktop">
-  <div class="notification is-primary">
-    <label class="form-check-label text-white" for="showAnswersCheckbox">
-      <input
-        class="form-check-input"
-        type="checkbox"
-        id="showAnswersCheckbox"
-      />
-      Show Answers
-    </label>
-    <div class="card">
-      <header class="card-header">
-        <h5 id="question" class="card-header-title"></h5>
-        <button class="card-header-icon" aria-label="more options">
-          <span class="icon">
-            <i class="fas fa-angle-down" aria-hidden="true"></i>
-          </span>
-        </button>
-      </header>
-      <div class="card-content">
-        <div class="content">
-          <p id="answer" class="card-text text-center answer hide"></p>
-        </div>
-      </div>
-      <footer class="card-footer">
-        <a href="#" class="card-footer-item" id="prev-question"
-          ><button class="button is-small is-info is-light">Prev</button></a
-        >
-        <a href="#" class="card-footer-item" id="show-answer"
-          ><button class="button is-medium is-success">Show Answer</button></a
-        >
-        <a href="#" class="card-footer-item" id="next-question"
-          ><button class="button is-small is-info is-light">Next</button></a
-        >
-      </footer>
+<%- include('partials/header', {title: 'Quiz Time!', style: './css/quiz.css'})
+%>
+<h1 class="title is-1 has-text-centered">Quiz Time!</h1>
+
+<div class="container is-max-desktop mt-5">
+  <div class="box has-background-primary">
+    <div class="has-text-centered">
+      <label class="checkbox has-text-white" for="showAnswersCheckbox">
+        <input type="checkbox" id="showAnswersCheckbox" />
+        Show Answers
+      </label>
     </div>
+  </div>
+  <div class="card">
+    <header class="card-header">
+      <p id="question" class="card-header-title"></p>
+    </header>
+    <div class="card-content">
+      <div class="content">
+        <p
+          id="answer"
+          class="card-text has-text-centered is-size-4 has-text-weight-semibold answer hide"
+        ></p>
+      </div>
+    </div>
+    <footer class="card-footer">
+      <a href="#" class="card-footer-item" id="prev-question">
+        <button class="button is-small is-info is-light">Prev</button>
+      </a>
+      <a href="#" class="card-footer-item">
+        <button id="show-answer" class="button is-medium is-success">
+          Show Answer
+        </button>
+      </a>
+      <a href="#" class="card-footer-item" id="next-question">
+        <button class="button is-small is-info is-light">Next</button>
+      </a>
+    </footer>
   </div>
 </div>
 
-<div
-  class="container-fluid d-flex flex-column justify-content-center min-vh-100"
->
-  <h1 class="text-center my-1 display-1">Quiz Time!</h1>
-  <div class="row">
-    <div class="col-md-12">
-      <div class="checkbox-container my-2">
-        <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="showAnswersCheckbox"
-          />
-          <label class="form-check-label text-white" for="showAnswersCheckbox">
-            Show Answers
-          </label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="randomizeCheckbox"
-          />
-          <label class="form-check-label text-white" for="randomizeCheckbox">
-            Randomize
-          </label>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="card mx-auto">
-        <div class="card-body">
-          <h5 id="question" class="card-title text-center"></h5>
-          <hr />
-          <h6 id="quiz-category"></h6>
-          <hr />
-          <div class="answer-wrapper">
-            <p id="answer" class="card-text text-center answer hide"></p>
-          </div>
-          <div class="btn-container">
-            <div class="d-flex flex-column flex-md-row justify-content-center">
-              <button class="btn-primary" id="show-answer">Show Answer</button>
-            </div>
-            <div class="d-flex justify-content-center mt-md-0 mt-2">
-              <button class="btn-secondary" id="prev-question">Prev</button>
-              <button class="btn-secondary" id="next-question">Next</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <script src="js/quiz.js"></script>
 <%-include('./partials/footer') %>
