added more bulma styling

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -13,13 +13,13 @@
   </div>
   <div class="card">
     <header class="card-header">
-      <p id="question" class="card-header-title"></p>
+      <p id="question" class="card-header-title is-size-4"></p>
     </header>
     <div class="card-content">
       <div class="content">
         <p
           id="answer"
-          class="card-text has-text-centered is-size-4 has-text-weight-semibold answer hide"
+          class="card-text has-text-centered is-size-6 has-text-weight-semibold answer hide"
         ></p>
       </div>
     </div>
