added more bulma styling

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
   <div class="navbar-brand">
     <a class="navbar-item" href="#">
       
-      <h1>Let's UPGRADE!</h1>
+      <h1 class="is-size-3 has-text-weight-bold">Let's UPGRADE!</h1>
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -49,7 +49,7 @@
         Home
       </a>
 
-      <a class="navbar-item" href="/quiz">
+      <a class="navbar-item is-size-5 has-text-weight-bold" href="/quiz">
         Start Quiz!
       </a>
 
