added new briefing route

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,6 +59,9 @@
         </a>
 
         <div class="navbar-dropdown">
+          <a class="navbar-item" href="/briefings">
+            Briefing Guides
+          </a>
           <a class="navbar-item" href="/questions/create">
             Add Questions
           </a>
