--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,14 +17,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../css/styles.css"> -->
-    <link rel="stylesheet" href="../css/bulma/css/bulma.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-icons@1.6.1/dist/css/bulma-icons.min.css" />
+    <link rel="stylesheet" href="/css/bulma/css/bulma.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-icons@1.6.1/dist/css/bulma-icons.min.css" /> -->
     <% const stylesheet = locals.style || null; %>
     <% if(stylesheet) { %>
       <link rel="stylesheet" href="<%= style %>">
     <% } %>
     <script src="https://kit.fontawesome.com/082eaaba14.js" crossorigin="anonymous"></script>
-    <script src="../js/navbar.js"></script>
+    <script src="/js/navbar.js"></script>
 
   </head>
   <body>
